--- a/admission-ar.html
+++ b/admission-ar.html
@@ -199,23 +199,23 @@
                                                 <div role="form" class="wpcf7" id="wpcf7-f5439-p5433-o1" lang="en-US"
                                                     dir="ltr">
                                                     <div class="screen-reader-response"></div>
-                                                    <form id="form" action="#" method="post" class="wpcf7-form ar-float mrg33"
+                                                    <form id="form" action="#" method="POST" class="wpcf7-form ar-float mrg33"
                                                         novalidate="novalidate">
 
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="text" name="your-name" value="" size="40"
+                                                                <input type="text" name="الاسم الأول" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="الاسم الأول*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-name"><input
-                                                                    type="text" name="your-name" value="" size="40"
+                                                                    type="text" name="اسم العائلة" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="اسم العائلة*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-phone">
-                                                                <input type="tel" name="your-phone" value="" size="40"
+                                                                <input type="tel" name="رقم الهاتف" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="الهاتف*"
@@ -225,7 +225,7 @@
 
                                                         <p>
                                                             <span class="wpcf7-form-control-wrap your-email">
-                                                                <input type="email" name="your-email" value="" size="40"
+                                                                <input type="email" name="بريد إلكتروني" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="بريد إلكتروني*"
@@ -238,7 +238,7 @@
                                                             أدخل عنوان بريد إلكتروني صالح.</p>
 
                                                         <p><span class="wpcf7-form-control-wrap tour-date"><input
-                                                                    type="date" name="tour-date" value=""
+                                                                    type="date" name="التاريخ" value=""
                                                                     class="wpcf7-form-control wpcf7-date wpcf7-validates-as-required wpcf7-validates-as-date ar-font ar-float ar-mrg13"
                                                                     min="1980-01-01" max="2058-12-31"
                                                                     aria-required="true" aria-invalid="false"
@@ -254,7 +254,7 @@
                                                         </p>
                                                         <p>
                                                             <span class="wpcf7-form-control-wrap nationality-dropdown">
-                                                                <select name="nationality-ar"
+                                                                <select name="الجنسية"
                                                                     class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false">
                                                                     <option value="Select Nationality*">يختار
@@ -265,13 +265,13 @@
 
 
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="number" name="your-name" value="" size="40"
+                                                                <input type="number" name="الهوية الوطنية" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="الهوية الوطنية*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="number" name="your-name" value="" size="40"
+                                                                <input type="number" name="تليفون محمول" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="تليفون محمول*" />
@@ -280,25 +280,25 @@
                                                         <p class="p-about4"><span
                                                                 class="wpcf7-form-control-wrap your-name">اسم الاب
                                                                 <hr class="p-about4">
-                                                                <input type="text" name="your-name" value="" size="40"
+                                                                <input type="text" name="الاسم الأب الأول" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="الاسم الأول*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="text" name="your-name" value="" size="40"
+                                                                <input type="text" name="اسم العائلة" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="اسم العائلة*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="number" name="your-name" value="" size="40"
+                                                                <input type="number" name="بطاقة الرقم القومي للأب" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="بطاقة الرقم القومي للأب*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="text" name="your-name" value="" size="40"
+                                                                <input type="text" name="وظيفة الأب" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="وظيفة الأب*" />
@@ -307,25 +307,25 @@
                                                         <p class="p-about4"><span
                                                                 class="wpcf7-form-control-wrap your-name">اسم الأم
                                                                 <hr class="p-about4">
-                                                                <input type="text" name="your-name" value="" size="40"
+                                                                <input type="text" name="الاسم الأول" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="الاسم الأول*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="text" name="your-name" value="" size="40"
+                                                                <input type="text" name="اسم العائلة" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="اسم العائلة*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="number" name="your-name" value="" size="40"
+                                                                <input type="number" name="بطاقة الهوية الوطنية للأم" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="بطاقة الهوية الوطنية للأم*" />
                                                             </span></p>
                                                         <p><span class="wpcf7-form-control-wrap your-name">
-                                                                <input type="text" name="your-name" value="" size="40"
+                                                                <input type="text" name="وظيفة الأم" value="" size="40"
                                                                     class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required ar-font"
                                                                     aria-required="true" aria-invalid="false"
                                                                     placeholder="وظيفة الأم*" />
@@ -624,10 +624,10 @@
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input id="phone" type="number" name="phone" size="40" dir="rtl"
-                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false"
-                                    required pattern="[+0-9\s]+">
+                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false" required
+                                    pattern="[+0-9\s]+" class="ar-font">
 
-                                <input type="submit" id="submit" name="submit" value="سـجـل الآن">
+                                <input type="submit" id="submit" name="submit" value="سـجـل الآن" class="ar-font">
                             </form>
                         </div>
                     </div>
