--- a/contact-ar.html
+++ b/contact-ar.html
@@ -41,8 +41,7 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font ar-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home text-ar1"><a
-                                        href="index-ar.html">الرئيسية</a>
+                                <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
                                 <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
@@ -60,11 +59,16 @@
                                         الرياض</a></li>
                                 <li class="menu-item"><a href="collaboration-ar.html" class="text-ar1">تعاون</a></li>
                                 <li class="menu-item"><a href="gallery-ar.html" class="text-ar1">المعرض</a></li>
-                                <li class="menu-item  current-menu-item"><a href="contact-ar.html" class="text-ar1">تواصل معنا</a></li>
+                                <li class="menu-item  current-menu-item"><a href="contact-ar.html"
+                                        class="text-ar1">تواصل معنا</a></li>
                                 <li class="menu-item menu-item-has-children lang1"><a href="#">اللغه</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt="" class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a></li>
-                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt="" class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a></li>
+                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt=""
+                                                class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a>
+                                        </li>
+                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt=""
+                                                class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
@@ -166,7 +170,8 @@
                                     <div
                                         class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                         <div class="gdlr-core-title-item-title-wrap clearfix">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title title4 cont-ar ar-font">
+                                            <h3
+                                                class="gdlr-core-title-item-title gdlr-core-skin-title title4 cont-ar ar-font">
                                                 تــواصــل مــعــنــا</h3>
                                         </div>
                                         <span
@@ -206,15 +211,15 @@
                                                     <div role="form" class="wpcf7" id="wpcf7-f1979-p1964-o1" lang="ar"
                                                         dir="rtl">
                                                         <div class="screen-reader-response"></div>
-                                                        <form class="quform" action="plugins/quform/process.php"
-                                                            method="post" enctype="multipart/form-data" onclick="">
+                                                        <form action="#"
+                                                            method="POST">
 
                                                             <div class="quform-elements">
                                                                 <div class="quform-element">
                                                                     <p class="labels form-ar text-ar1">الاسم (مطلوب)
                                                                         <br>
                                                                         <span class="wpcf7-form-control-wrap your-name">
-                                                                            <input id="name" type="text" name="name"
+                                                                            <input id="name" type="text" name="Name"
                                                                                 size="40" class="input1"
                                                                                 aria-required="true"
                                                                                 aria-invalid="false" required>
@@ -222,11 +227,12 @@
                                                                     </p>
                                                                 </div>
                                                                 <div class="quform-element">
-                                                                    <p class="labels form-ar text-ar1">البريد الإلكتروني (مطلوب)
+                                                                    <p class="labels form-ar text-ar1">البريد الإلكتروني
+                                                                        (مطلوب)
                                                                         <br>
                                                                         <span
                                                                             class="wpcf7-form-control-wrap your-email">
-                                                                            <input id="email" type="text" name="email"
+                                                                            <input id="email" type="text" name="Email"
                                                                                 size="40" class="input1"
                                                                                 aria-required="true"
                                                                                 aria-invalid="false" required>
@@ -238,7 +244,7 @@
                                                                         <br>
                                                                         <span
                                                                             class="wpcf7-form-control-wrap your-phone">
-                                                                            <input id="phone" type="number" name="phone"
+                                                                            <input id="phone" type="number" name="Phone"
                                                                                 size="40" class="input1"
                                                                                 aria-required="true"
                                                                                 aria-invalid="false" required
@@ -251,7 +257,7 @@
                                                                         <br>
                                                                         <span
                                                                             class="wpcf7-form-control-wrap your-message">
-                                                                            <textarea id="message" name="message"
+                                                                            <textarea id="message" name="Message"
                                                                                 cols="40" rows="10" class="input1"
                                                                                 aria-invalid="false"></textarea>
                                                                         </span>
@@ -295,14 +301,14 @@
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
                             <h2 class="text3-ar">تواصل معنا الآن<br>
-                                ! لنرى كيف يمكننا مساعدتك 
+                                ! لنرى كيف يمكننا مساعدتك
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input id="phone" type="number" name="phone" size="40" dir="rtl"
-                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false"
-                                    required pattern="[+0-9\s]+">
+                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false" required
+                                    pattern="[+0-9\s]+" class="ar-font">
 
-                                <input type="submit" id="submit" name="submit" value="سـجـل الآن">
+                                <input type="submit" id="submit" name="submit" value="سـجـل الآن" class="ar-font">
                             </form>
                         </div>
                     </div>
@@ -328,7 +334,7 @@
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                         <li class="menu-item" style="direction: rtl;"><a
+                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="mailto:Info@raffles-me.com"
                                                 style="float: right;">Info@raffles-me.com</a></li>
                                         <li class="menu-item" style="direction: rtl;"><a
@@ -346,7 +352,7 @@
                                     <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                         <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
+                                        <li class="menu-item" style="direction: rtl;"><a href="tel:+966550111719"
                                                 style="float: right;direction: ltr;">+966 55 011 1719</a></li>
                                         <li class="menu-item" style="direction: rtl;"><a href="tel:+966552995509"
                                                 style="float: right;direction: ltr;">+966 55 299 5509</a></li>
@@ -364,7 +370,7 @@
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points"
                                         style="margin-right: 13%;">
-                                       <li class="menu-item" style="direction: rtl;"><a
+                                        <li class="menu-item" style="direction: rtl;"><a
                                                 href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu"
                                                 style="float: right;">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
