--- a/fashion-management-design-ar.html
+++ b/fashion-management-design-ar.html
@@ -393,10 +393,10 @@
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input id="phone" type="number" name="phone" size="40" dir="rtl"
-                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false"
-                                    required pattern="[+0-9\s]+">
+                                    placeholder="اكتب رقم هاتفك" aria-required="true" aria-invalid="false" required
+                                    pattern="[+0-9\s]+" class="ar-font">
 
-                                <input type="submit" id="submit" name="submit" value="سـجـل الآن">
+                                <input type="submit" id="submit" name="submit" value="سـجـل الآن" class="ar-font">
                             </form>
                         </div>
                     </div>
